# Document-Intelligent-Processor

./: .commitlintrc.json  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  M0-spec.md  M0-tasks.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/src/document_processor/: config.py  logging_config.py  main.py
backend/src/document_processor/api/middleware/: access_log.py  auth.py  request_id.py
backend/src/document_processor/api/v1/: dependencies.py  exception_handlers.py
backend/src/document_processor/application/documents/: apply_correction.py  approve_document.py  get_document.py  list_documents.py  upload_document.py
backend/src/document_processor/application/jobs/: enqueue_extraction.py  process_extraction_job.py
backend/src/document_processor/application/ports/: blob_storage.py  documents_repository.py  erp_adapter.py  jobs_repository.py  ocr_provider.py  queue_publisher.py
backend/src/document_processor/domain/documents/: models.py  state_machine.py  value_objects.py
backend/src/document_processor/domain/jobs/: models.py  retry_policy.py
backend/src/document_processor/infrastructure/auth/: entra_external_id.py
backend/src/document_processor/infrastructure/blob/: azure_blob_storage.py
backend/src/document_processor/infrastructure/observability/: app_insights.py
backend/src/document_processor/infrastructure/ocr/: azure_document_intelligence.py
backend/src/document_processor/infrastructure/persistence/: cosmos_client.py  cosmos_documents_repository.py  (+1 more)
backend/tests/: conftest.py
backend/tests/integration/api/: test_health.py
backend/tests/integration/persistence/: test_cosmos_smoke.py
backend/tests/unit/api/: test_dto_mapping.py
backend/tests/unit/domain/: test_field_schemas.py  test_state_machine.py
(+61 files in other folders)
