[project]
name = "document-processor"
version = "0.1.0"
description = "IDP backend — FastAPI + Azure"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "azure-cosmos>=4.7",
    "azure-storage-blob>=12.23",
    "azure-servicebus>=7.12",
    "azure-keyvault-secrets>=4.8",
    "azure-ai-documentintelligence>=1.0",
    "azure-identity>=1.18",
    "opentelemetry-sdk>=1.27",
    "azure-monitor-opentelemetry-exporter>=1.0",
    "python-ulid>=3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_processor"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["document_processor"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "azure.*",
    "structlog.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "cosmos_emulator: requires local Cosmos DB emulator on https://localhost:8081",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
